# infraroo

./: .gitignore  README.md  main.py  project_overview.md  pyproject.toml  train.ipynb
config/: classes.yaml  config.yaml
data/: coordinates.csv
notebooks/: 01_training.ipynb
scripts/: download_images.py
src/infraroo/core/: config.py
src/infraroo/data/: downloader.py
